--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "overrides": {
       "@babel/traverse@<7.23.2": ">=7.23.2",
       "semver@<5.7.2": ">=5.7.2",
-      "semver@>=7.0.0 <7.5.2": ">=7.5.2"
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+      "ws@>=7.0.0 <7.5.10": ">=7.5.10",
+      "braces@<3.0.3": ">=3.0.3"
     }
   }
 }
